# israelid

./: CMakeLists.txt  Cargo.toml  Doxyfile  Makefile  README.md  README_8md.html  bench.cpp  bin.c  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  doxygen_crawl.html  files.html  globals.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  israelid.c  israelid_8h.html  israelid_8h__incl.map  israelid_8h__incl.md5  israelid_8h_source.html  menudata.js  push_docs  tests.cpp
.cache/clangd/index/: bin.c.D536A52267F97C3A.idx  israelid.c.48CCC7635842C5A3.idx  israelid.h.0E4567F43E9807EC.idx  tests.cpp.92A04F9A557717C9.idx
benches/: bench.rs
include/: israelid.h
include_dev/: israelid_dev.h
search/: all_0.js  all_1.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js
src/: israelid.c  lib.rs
